fix on mobile

--- a/assets/stylesheets/common.sass
+++ b/assets/stylesheets/common.sass
@@ -232,8 +232,8 @@ section
   position: fixed
   top: 400px
   height: 400px
-  width: 120%
-  left: -10%
+  width: 118%
+  left: -9%
   background: #E7FF00
   z-index: 0
   transform: rotate(22deg) translateZ(0)
